# ibvs_project

./: README.md
.claude/: settings.local.json
install/: local_setup.sh  setup.sh
install/ibvs_controller/lib/ibvs_controller/: camera_controller
install/ibvs_controller/share/ibvs_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ibvs_controller_cpp/include/ibvs_controller_cpp/ibvs_controller_cpp/: camera_controller.hpp
install/ibvs_controller_cpp/share/ament_index/resource_index/package_run_dependencies/: ibvs_controller_cpp
install/ibvs_controller_cpp/share/ibvs_controller_cpp/: local_setup.sh  package.bash  package.ps1  package.sh
install/ibvs_simulation/share/ament_index/resource_index/package_run_dependencies/: ibvs_simulation
install/ibvs_simulation/share/ament_index/resource_index/parent_prefix_path/: ibvs_simulation
install/ibvs_simulation/share/ibvs_simulation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/ibvs_simulation/share/ibvs_simulation/cmake/: ibvs_simulationConfig-version.cmake  ibvs_simulationConfig.cmake
install/ibvs_simulation/share/ibvs_simulation/config/: ibvs.rviz
install/ibvs_simulation/share/ibvs_simulation/environment/: ament_prefix_path.dsv  path.dsv
install/ibvs_simulation/share/ibvs_simulation/launch/: ibvs_world.launch.py
install/ibvs_simulation/share/ibvs_simulation/models/: ibvs_world.sdf
install/ibvs_simulation/share/ibvs_simulation/models/rgbd_camera_robot/: model.sdf  model_backup.sdf
install/ibvs_simulation/share/ibvs_simulation/worlds/: ibvs_world.sdf
log/: latest_build
src/ibvs_controller/: setup.py
src/ibvs_controller/ibvs_controller/: camera_controller.py
src/ibvs_controller/scripts/: camera_controller.py  example_feature_extractor.py
src/ibvs_controller_cpp/: CMakeLists.txt  package.xml
src/ibvs_controller_cpp/include/ibvs_controller_cpp/: camera_controller.hpp
src/ibvs_controller_cpp/src/: camera_controller.cpp  camera_controller_node.cpp
src/ibvs_simulation/: CMakeLists.txt
src/ibvs_simulation/config/: ibvs.rviz
src/ibvs_simulation/launch/: ibvs_world.launch.py
src/ibvs_simulation/models/rgbd_camera_robot/: model.sdf  model_backup.sdf
src/ibvs_simulation/worlds/: ibvs_world.sdf
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/ibvs_controller/lib/ibvs_controller/: camera_controller
src/install/ibvs_controller/share/ibvs_controller/: package.dsv  package.ps1  package.sh  package.xml
src/install/ibvs_controller_cpp/include/ibvs_controller_cpp/ibvs_controller_cpp/: camera_controller.hpp
src/install/ibvs_controller_cpp/share/ibvs_controller_cpp/: package.dsv  package.sh  package.zsh
src/install/ibvs_simulation/share/ibvs_simulation/: package.bash  package.sh  package.zsh
src/log/: latest_build
(+4 files in other folders)
